--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
 
 		<!-- Contact -->
 			<section id="contact" class="main style3 secondary">
-				<div class="content">
+				<div class="container">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p>For all enquiries, send me an email using the form below.</p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
+						<form method="post" action="https://formsubmit.co/nmacharla@outlook.in">
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
 								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
