--- a/index.html
+++ b/index.html
@@ -104,26 +104,34 @@
 			</section>
 
 		<!-- Contact -->
-			<section id="contact" class="main style3 secondary">
-				<div class="container">
-					<header>
-						<h2>Say Hello.</h2>
-						<p>For all enquiries, send me an email using the form below.</p>
-					</header>
-					<div class="box">
-						<form method="post" action="https://formsubmit.co/nmacharla@outlook.in">
-							<div class="fields">
-								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
-								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
-								<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
+		<section id="contact" class="main style3 secondary">
+			<div class="container">
+				<header>
+					<h2>Say Hello.</h2>
+					<p>For all enquiries, send me an email using the form below.</p>
+				</header>
+				<div class="box">
+					<form action="https://formsubmit.co/nmacharla@outlook.in" method="POST">
+						<div class="form-group">
+							<div class="form-row">
+								<div class = "col">
+									<input type="text" name="name" class = "form-control" placeholder="Name" required>
+								</div>
+								<div class = "col">
+									<input type="email" name="email" class = "form-control" placeholder="Email" required>
+								</div>
 							</div>
-							<ul class="actions special">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
-					</div>
+						</div>
+						<div class="form-group">
+							<textarea name="message" class="form-control" placeholder="Message" rows=""></textarea>
+						</div>
+						<ul class="actions special">
+							<li><input type="submit" value="Send Message" /></li>
+						</ul>
+					</form>
 				</div>
-			</section>
+			</div>
+		</section>
 
 		<!-- Footer -->
 			<footer id="footer">
