--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Nikhil Macharla</h1>
+				<h1>NIKHIL MACHARLA</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">About Me</a></li>
@@ -34,7 +34,7 @@
 					<header>
 						<h2>Hey.</h2>
 					</header>
-					<p>Welcome to my <strong> Portfolio</strong></p>
+					<p>Welcome to my <strong>Portfolio</strong></p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -45,11 +45,9 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>Data Visualization</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I used Tableau Public to visualize various datasets. I have included visualizations as a part of my coursework aswell.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -58,23 +56,19 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Who I Am</h2>
+						<h2>Projects</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I have a keen interest in Machine Learning and I picked some interesting research work and popular projects and used Python for coding and visualization. I have included projects and research work as part of my coursework aswell.</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#three" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Work -->
-			<section id="work" class="main style3 primary">
+			<section id="three" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<h2>Blogs</h2>
+						<p>I believe the best way to spread knowledge is to pen it down. Large number of people can read and get educated. I have written blogs focusing on Data Science.</p>
 					</header>
 
 					<!-- Gallery  -->
