--- a/index.html
+++ b/index.html
@@ -15,18 +15,52 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<h1>NIKHIL MACHARLA</h1>
-				<nav>
-					<ul>
-						<li><a href="#intro">About Me</a></li>
-						<li><a href="#one">Data Visualization</a></li>
-						<li><a href="#two">Projects</a></li>
-						<li><a href="#three">Blogs</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</nav>
-			</header>
+			<header class="header_area">
+				<div class="main_menu">
+				  <nav class="navbar navbar-expand-lg navbar-light">
+					<div class="container">
+					  <!-- Brand and toggle get grouped for better mobile display -->
+					  <a class="navbar-brand" href="index.html"
+						><img src="" width="80px" alt=""
+					  /></a>
+					  <button
+						class="navbar-toggler"
+						type="button"
+						data-toggle="collapse"
+						data-target="#navbarSupportedContent"
+						aria-controls="navbarSupportedContent"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					  >
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					  </button>
+					  <!-- Collect the nav links, forms, and other content for toggling -->
+					  <div
+						class="collapse navbar-collapse offset"
+						id="navbarSupportedContent"
+					  >
+						<ul class="nav navbar-nav menu_nav justify-content-end">
+						  <li class="nav-item active">
+							<a class="nav-link" href="index.html">About Me</a>
+						  </li>
+						  <li class="nav-item">
+							<a class="nav-link" href="#one">About</a>
+						  </li>
+						  <li class="nav-item">
+							<a class="nav-link" href="#two">Contact</a>
+						  </li>
+						  <li class="nav-item active">
+							<a class="nav-link" href="three">Home</a>
+						  </li>
+						  <li class="nav-item">
+							<a class="nav-link" href="#contact-me">Contact</a>
+						</ul>
+					  </div>
+					</div>
+				  </nav>
+				</div>
 
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
